force-app/main/default/objects/Account/fields/IsRestrictedCountry__c.field-meta.xml
<CustomField>
    <fullName>IsRestrictedCountry__c</fullName>
    <description>Check whether the submitted account is located in one of the restricted countries.</description>
    <formula>OR(
BillingCountry == &apos;IR&apos;,
BillingCountry == &apos;CU&apos;,
BillingCountry == &apos;SY&apos;,
BillingCountry == &apos;KP&apos;,
BillingCountry == &apos;SD&apos;,
BillingCountry == &apos;BY&apos;,
BillingCountry == &apos;RU&apos;,
ShippingCountry == &apos;IR&apos;,
ShippingCountry == &apos;CU&apos;,
ShippingCountry == &apos;SY&apos;,
ShippingCountry == &apos;KP&apos;,
ShippingCountry == &apos;SD&apos;,
ShippingCountry == &apos;BY&apos;,
ShippingCountry == &apos;RU&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsRestrictedCountry</label>
    <type>Checkbox</type>
</CustomField>