force-app/main/default/objects/Account/fields/Lead_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account_Type__c</fullName>
    <description>Added through Lead conversion</description>
    <inlineHelpText>Added through Lead conversion</inlineHelpText>
    <label>Lead Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>