force-app/main/default/objects/Account/fields/Lead_Date_Shop_Order__c.field-meta.xml
<CustomField>
    <fullName>Lead_Date_Shop_Order__c</fullName>
    <inlineHelpText>Info from Lead conversion</inlineHelpText>
    <label>Lead Date Shop Order</label>
    <type>Date</type>
</CustomField>