force-app/main/default/objects/Account/fields/Lead_Purchased_Items__c.field-meta.xml
<CustomField>
    <fullName>Lead_Purchased_Items__c</fullName>
    <inlineHelpText>Info from Lead conversion</inlineHelpText>
    <label>Lead Purchased Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>