force-app/main/default/objects/Account/fields/Lead_Qualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualification_Notes__c</fullName>
    <inlineHelpText>Info from Lead conversion</inlineHelpText>
    <label>Lead Qualification Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>