force-app/main/default/objects/Account/fields/leadenhancer_address_city__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_city__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>