force-app/main/default/objects/Account/fields/leadenhancer_address_continent__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_continent__c</fullName>
    <label>Continent</label>
    <length>14</length>
    <type>Text</type>
</CustomField>