force-app/main/default/objects/Account/fields/leadenhancer_address_countryiso__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_countryiso__c</fullName>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>