force-app/main/default/objects/Account/fields/leadenhancer_address_email__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>