force-app/main/default/objects/Account/fields/leadenhancer_address_fax__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_fax__c</fullName>
    <label>Fax</label>
    <length>50</length>
    <type>Text</type>
</CustomField>