force-app/main/default/objects/Account/fields/leadenhancer_address_phone__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_phone__c</fullName>
    <label>Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>