force-app/main/default/objects/Account/fields/leadenhancer_address_postalcode__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_postalcode__c</fullName>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>