force-app/main/default/objects/Account/fields/leadenhancer_address_region__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_region__c</fullName>
    <description>Added by SImon Diel for Leadenhancer integration</description>
    <label>Region (Leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>