force-app/main/default/objects/Account/fields/leadenhancer_address_registeredaddress__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_registeredaddress__c</fullName>
    <label>Registered Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>