force-app/main/default/objects/Account/fields/leadenhancer_address_www__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_www__c</fullName>
    <description>(From Leadenhancer)</description>
    <inlineHelpText>(From Leadenhancer)</inlineHelpText>
    <label>Website (Leadenhancer)</label>
    <type>Url</type>
</CustomField>