force-app/main/default/objects/Account/fields/leadenhancer_currency__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_currency__c</fullName>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>