force-app/main/default/objects/Account/fields/leadenhancer_duns__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_duns__c</fullName>
    <description>(From Leadenhancer) a D&amp;B unique nine-digit identifier for businesses</description>
    <inlineHelpText>(From Leadenhancer) a D&amp;B unique nine-digit identifier for businesses</inlineHelpText>
    <label>DUNS-Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>