force-app/main/default/objects/Account/fields/leadenhancer_financialyearend__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_financialyearend__c</fullName>
    <label>Financial Year End</label>
    <length>12</length>
    <type>Text</type>
</CustomField>