force-app/main/default/objects/Account/fields/leadenhancer_legalstatus__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_legalstatus__c</fullName>
    <label>Legal Status</label>
    <length>12</length>
    <type>Text</type>
</CustomField>