force-app/main/default/objects/Account/fields/leadenhancer_name__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_name__c</fullName>
    <description>(From Leadenhancer) Organisation name</description>
    <inlineHelpText>(From Leadenhancer) Organisation name</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>