force-app/main/default/objects/Account/fields/leadenhancer_noofemployees__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_noofemployees__c</fullName>
    <description>(From Leadenhancer)</description>
    <inlineHelpText>(From Leadenhancer)</inlineHelpText>
    <label>No. of Employees</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>