force-app/main/default/objects/Account/fields/leadenhancer_organisationid__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_organisationid__c</fullName>
    <label>Organisation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>