force-app/main/default/objects/Account/fields/leadenhancer_positionceo__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_positionceo__c</fullName>
    <description>(From Leadenhancer)</description>
    <inlineHelpText>(From Leadenhancer)</inlineHelpText>
    <label>Name CEO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>