force-app/main/default/objects/Account/fields/leadenhancer_sales__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_sales__c</fullName>
    <description>(From Leadenhancer)</description>
    <inlineHelpText>(From Leadenhancer)</inlineHelpText>
    <label>Sales</label>
    <length>12</length>
    <type>Text</type>
</CustomField>