force-app/main/default/objects/Account/fields/leadenhancer_sicprimarycode__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_sicprimarycode__c</fullName>
    <description>(From Leadenhancer)</description>
    <inlineHelpText>(From Leadenhancer)</inlineHelpText>
    <label>Standard Industrial Classification</label>
    <length>4</length>
    <type>Text</type>
</CustomField>