force-app/main/default/objects/Account/fields/leadenhancer_sicprimarycodedescription__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_sicprimarycodedescription__c</fullName>
    <description>(From Leadenhancer)</description>
    <inlineHelpText>(From Leadenhancer)</inlineHelpText>
    <label>Standard Industrial ClassificDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>