force-app/main/default/objects/Account/fields/leadenhancer_sninacecode__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_sninacecode__c</fullName>
    <label>SniNaceCode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>