force-app/main/default/objects/Account/fields/leadenhancer_sninacecodedescription__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_sninacecodedescription__c</fullName>
    <label>SniNaceCodeDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>