force-app/main/default/objects/Account/fields/leadenhancer_source__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_source__c</fullName>
    <label>Source</label>
    <length>5</length>
    <type>Text</type>
</CustomField>