force-app/main/default/objects/Account/fields/Lenth_Visiting_Country__c.field-meta.xml
<CustomField>
    <fullName>Lenth_Visiting_Country__c</fullName>
    <description>Used for maintenance of country info</description>
    <formula>len( BillingCountry)</formula>
    <label>Lenth Visiting Country</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>