force-app/main/default/objects/Account/fields/Lesswire_Activity__c.field-meta.xml
<CustomField>
    <fullName>Lesswire_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if this Lesswire had activities with this account</inlineHelpText>
    <label>Lesswire Activity</label>
    <type>Checkbox</type>
</CustomField>