force-app/main/default/objects/Account/fields/Linked_to_Abacus__c.field-meta.xml
<CustomField>
    <fullName>Linked_to_Abacus__c</fullName>
    <formula>IF(Customer_No__c != &apos;&apos;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 20),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account linked to Abacus (ERP system). Name, Fax, Phone, and Address can no longer be modified. Inform sales admin or channel manager instead.</inlineHelpText>
    <label>Linked to Abacus</label>
    <type>Text</type>
</CustomField>