force-app/main/default/objects/Account/fields/LogoId__c.field-meta.xml
<CustomField>
    <fullName>LogoId__c</fullName>
    <label>LogoId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>