force-app/main/default/objects/Account/fields/Mailing_Area__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Area__c</fullName>
    <formula>Case(BillingCountry,
   &quot;CH&quot;,&quot;Switzerland&quot;,
   &quot;DE&quot;,&quot;Germany&quot;,
   CASE (text(uB_Office__c ),
      &quot;EMEA&quot;, &quot;Rest of EMEA&quot;,
      &quot;Hongkong&quot;, &quot;China&quot;,
      &quot;HQ&quot;, &quot;Switzerland&quot;,
      text(uB_Office__c )
   )
)</formula>
    <inlineHelpText>Mailing regions of interest: CH, DE, else uB Office</inlineHelpText>
    <label>Mailing Area</label>
    <type>Text</type>
</CustomField>