force-app/main/default/objects/Account/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <inlineHelpText>Market where largest share of u-blox revenues are generated. Choose &quot;not applicable&quot; for distributors, sales reps, competitors.</inlineHelpText>
    <label>Market (OLD)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>