force-app/main/default/objects/Account/fields/MFi_Licensee__c.field-meta.xml
<CustomField>
    <fullName>MFi_Licensee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account with Apple MFi license that can order products with &quot;MFi License Required&quot;</description>
    <inlineHelpText>Account with Apple MFi license that can order products with &quot;MFi License Required&quot;</inlineHelpText>
    <label>MFi Licensee</label>
    <type>Checkbox</type>
</CustomField>