force-app/main/default/objects/Account/fields/NDA_Available__c.field-meta.xml
<CustomField>
    <fullName>NDA_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated with Apex Trigger</description>
    <inlineHelpText>Checked if there is an active NDA (stored under Contracts).</inlineHelpText>
    <label>NDA Available</label>
    <type>Checkbox</type>
</CustomField>