force-app/main/default/objects/Account/fields/Neonseven_Activity__c.field-meta.xml
<CustomField>
    <fullName>Neonseven_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if the Account had or has contacts with Neonseven.</inlineHelpText>
    <label>Neonseven Activity</label>
    <type>Checkbox</type>
</CustomField>