force-app/main/default/objects/Account/fields/New_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>New_Channel_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If left empty, it will be populated if Account Owner is
- u-blox (except Inside Sales US): Account Owner
- u-blox (Inside Sales US) and distributor: Manager of the Account Owner</description>
    <inlineHelpText>If left empty, it will be populated if Account Owner is
- u-blox (except Inside Sales US): Account Owner
- u-blox (Inside Sales US) and distributor: Manager of the Account Owner</inlineHelpText>
    <label>Channel Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard,PowerPartner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>