force-app/main/default/objects/Account/fields/New_Market__c.field-meta.xml
<CustomField>
    <fullName>New_Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Application_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>