force-app/main/default/objects/Account/fields/New_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New Opportunity added to this Account. Updated with Process. To be used for Chatter post.</description>
    <inlineHelpText>New Opportunity added to this Account. Updated with Process. To be used for Chatter post.</inlineHelpText>
    <label>New Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>