force-app/main/default/objects/Account/fields/New_Order__c.field-meta.xml
<CustomField>
    <fullName>New_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New Order added to this Account. Updated with Process. To be used for Chatter post.</description>
    <inlineHelpText>New Order added to this Account. Updated with Process. To be used for Chatter post.</inlineHelpText>
    <label>New Order</label>
    <referenceTo>Billings__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>