force-app/main/default/objects/Account/fields/No_ECCN__c.field-meta.xml
<CustomField>
    <fullName>No_ECCN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No need to check customer website if user choose this option</description>
    <inlineHelpText>Choose this If quote is not about ECCN (Export Control Classification Number) products, no needs to check customer website in this case</inlineHelpText>
    <label>No ECCN</label>
    <type>Checkbox</type>
</CustomField>