force-app/main/default/objects/Account/fields/Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shares__c</fullName>
    <inlineHelpText>Number of shares this account owns</inlineHelpText>
    <label>Number of Shares</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>