force-app/main/default/objects/Account/fields/OppCloseDate__c.field-meta.xml
<CustomField>
    <fullName>OppCloseDate__c</fullName>
    <formula>TODAY() + 180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppCloseDate</label>
    <type>Date</type>
</CustomField>