force-app/main/default/objects/Account/fields/Order_Handling_Region__c.field-meta.xml
<CustomField>
    <fullName>Order_Handling_Region__c</fullName>
    <formula>if ( Linked_to_Abacus__c = &quot;&quot;, &quot;&quot;,
case( Abacus_Region_Code__c ,
0,&quot;Corporate&quot;,
1,&quot;EMEA&quot;,
3,&quot;Americas&quot;,
11, &quot;APAC&quot;,
&quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Region that handles the orders.</inlineHelpText>
    <label>Order Handling Region</label>
    <type>Text</type>
</CustomField>