force-app/main/default/objects/Account/fields/Owner_Notified__c.field-meta.xml
<CustomField>
    <fullName>Owner_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Account has been created from Abacus and the email alert has been sent to the new Owner.</description>
    <inlineHelpText>Checked if the Account has been created from Abacus and the email alert has been sent to the new Owner.</inlineHelpText>
    <label>Owner Notified</label>
    <type>Checkbox</type>
</CustomField>