force-app/main/default/objects/Account/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Distributor account which handles account.</description>
    <inlineHelpText>Distributor account which handles account.</inlineHelpText>
    <label>Partner Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Partner Account)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>