force-app/main/default/objects/Account/fields/Partner_User__c.field-meta.xml
<CustomField>
    <fullName>Partner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner user (Sales Rep) who handles account.</description>
    <inlineHelpText>Partner user (Sales Rep) who handles account.</inlineHelpText>
    <label>Partner Owner User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Distributor_Name__c</field>
            <operation>equals</operation>
            <valueField>$User.Distributor_Name__c</valueField>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Portal - Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>