force-app/main/default/objects/Account/fields/PayTerms__c.field-meta.xml
<CustomField>
    <fullName>PayTerms__c</fullName>
    <label>PayTerms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash in advance</fullName>
            </value>
            <value>
                <fullName>30 days net</fullName>
            </value>
            <value>
                <fullName>45 days net</fullName>
            </value>
            <value>
                <fullName>60 days net</fullName>
            </value>
            <value>
                <fullName>L/C irrevocable and confirmed</fullName>
            </value>
            <value>
                <fullName>Cash on delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>