force-app/main/default/objects/Account/fields/Position_Date__c.field-meta.xml
<CustomField>
    <fullName>Position_Date__c</fullName>
    <label>Position Date</label>
    <type>Date</type>
</CustomField>