force-app/main/default/objects/Account/fields/Position_Source__c.field-meta.xml
<CustomField>
    <fullName>Position_Source__c</fullName>
    <label>Position Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>