force-app/main/default/objects/Account/fields/Potential_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Potential_Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to filter Accounts from the mailing list. Automatically ticked if you create a new Account with Name including Competitor Name (from Competitor object). Clear the check if it isn&apos;t.</description>
    <inlineHelpText>Used to filter Accounts from the mailing list. Automatically ticked if you create a new Account with Name including Competitor Name (from Competitor object). Clear the check if it isn&apos;t.</inlineHelpText>
    <label>Potential Competitor</label>
    <type>Checkbox</type>
</CustomField>