force-app/main/default/objects/Account/fields/Potential_military_use__c.field-meta.xml
<CustomField>
    <fullName>Potential_military_use__c</fullName>
    <description>To quote ECCN products, the end use / user must be selected</description>
    <inlineHelpText>Select the end use / user after checking the customer website</inlineHelpText>
    <label>Potential military use / user</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No military use / user</fullName>
            </value>
            <value>
                <fullName>EUS Required</fullName>
            </value>
            <value>
                <fullName>Refused to sign EUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>