force-app/main/default/objects/Account/fields/Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Made to be used for transfer</description>
    <inlineHelpText>Made to be used for transfer</inlineHelpText>
    <label>Previous Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>