force-app/main/default/objects/Account/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>A: annual contribution &gt;$800k
B: annual contribution &gt;$175k
C: business expected but not high $$
Z: no business expected
X: unqualified (should have no X accounts - if you find any change to any of the other priorities)</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
            <value>
                <fullName>X</fullName>
                <default>true</default>
                <label>X</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>