force-app/main/default/objects/Account/fields/Private_Major_Shareholder__c.field-meta.xml
<CustomField>
    <fullName>Private_Major_Shareholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Show Organization which holds share of 3rd party</inlineHelpText>
    <label>Private Major Shareholder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Finance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>