force-app/main/default/objects/Account/fields/Proxy_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Proxy_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proxy Advisor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Type</field>
            <operation>equals</operation>
            <value>Proxy advisor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Proxy Advisor)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>