force-app/main/default/objects/Account/fields/Quotation_Not_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Not_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quote is not allowed to customer if customer refused to sign the end use / user statement</description>
    <inlineHelpText>Auto ticked on customer refused to sign the EUS document</inlineHelpText>
    <label>Quotation Not Allowed</label>
    <type>Checkbox</type>
</CustomField>