force-app/main/default/objects/Account/fields/RAE__c.field-meta.xml
<CustomField>
    <fullName>RAE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delegated FAE</description>
    <inlineHelpText>Delegated FAE in the absence of FAE</inlineHelpText>
    <label>RAE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard,PowerPartner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>RAE</relationshipName>
    <type>Lookup</type>
</CustomField>