force-app/main/default/objects/Account/fields/Record_Type_To_Convert__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_To_Convert__c</fullName>
    <description>Record Type to convert. given by Lead</description>
    <inlineHelpText>Record Type to convert. given by Lead</inlineHelpText>
    <label>Record Type To Convert</label>
    <length>18</length>
    <type>Text</type>
</CustomField>