force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region, derived from uB Office: Americas, APAC, EMEA, Corporate.
Undefined uB office fields are Corporate</description>
    <formula>CASE( uB_Office__c ,
&quot;Americas&quot;,&quot;Americas&quot;,
&quot;EMEA&quot;,&quot;EMEA&quot;,
&quot;Corporate&quot;,&quot;Corporate&quot;,
&quot;&quot;,&quot;Corporate&quot;,
&quot;APAC&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>